@@ -1,136 +1,187 @@
 package controllers;
 
-import java.io.*;
+import java.io.IOException;
+import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
+import java.time.LocalDateTime;
+import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.Iterator;
 import java.util.List;
+import java.util.Map;
+import javax.crypto.Mac;
+import javax.crypto.spec.SecretKeySpec;
 
-import connection.DBConnection;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.*;
 import jakarta.servlet.annotation.*;
 import models.*;
-import org.jdbi.v3.core.Jdbi;
 import services.*;
+import utils.ConfigLoader;
 
 @WebServlet(name = "OrderServlet", value = "/order")
 public class OrderServlet extends HttpServlet {
     private OrderService orderService;
     private OrderDetailService orderDetailService;
-    private DeliveryService deliveryService;
     private AddressService addressService;
     private StyleService styleService;
+    private PaymentService paymentService;
+    private CartService cartService;
+
+    // --- VNPAY CONFIGURATION ---
+    private static final String VNP_VERSION = "2.1.0";
+    private static final String VNP_COMMAND = "pay";
+    private static final String VNP_TMNCODE = ConfigLoader.getProperty("vnp.tmncode");
+    private static final String VNP_HASHSECRET = ConfigLoader.getProperty("vnp.hashsecret");
+    private static final String VNP_URL = "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html";
 
     @Override
     public void init() throws ServletException {
         super.init();
         orderService = new OrderService();
         orderDetailService = new OrderDetailService();
-        deliveryService = new DeliveryService();
+        DeliveryService deliveryService = new DeliveryService();
         addressService = new AddressService();
         styleService = new StyleService();
+        paymentService = new PaymentService();
+        cartService = new CartService();
     }
 
-    public void doPost(HttpServletRequest request, HttpServletResponse response) throws IOException, ServletException {
+    @Override
+    protected void doPost(HttpServletRequest request, HttpServletResponse response) throws IOException, ServletException {
         request.setCharacterEncoding("UTF-8");
-        String paymentMethod = request.getParameter("payment");
-        System.out.println("Payment Method chosen: " + paymentMethod);
+        response.setContentType("text/html;charset=UTF-8");
 
+        String paymentMethodChoice = request.getParameter("payment"); // "cod" hoặc "vnpay"
         HttpSession session = request.getSession();
         Cart cart = (Cart) session.getAttribute("cart");
         User user = (User) session.getAttribute("user");
 
         try {
-            if (cart == null || cart.getCartItems().isEmpty()) {
-                throw new IllegalStateException("Giỏ hàng của bạn đang trống.");
+            if (user == null) {
+                session.setAttribute("redirectAfterLogin", request.getContextPath() + "/checkout.jsp");
+                response.sendRedirect(request.getContextPath() + "/login.jsp");
+                return;
             }
-            // 5. BƯỚC 1: TẠO THÔNG TIN ĐƠN HÀNG CƠ BẢN (ORDER)
-            // Gọi hàm processOrderCreation để tạo đối tượng Order, lưu vào DB và lấy lại Order đã có ID
-            Order newOrder = processOrderCreation(request, user, cart, paymentMethod);
+            if (cart == null || cart.getCartItems().isEmpty()) {
+                throw new IllegalStateException("Giỏ hàng trống.");
+            }
+            if (paymentMethodChoice == null || paymentMethodChoice.trim().isEmpty()) {
+                throw new IllegalStateException("Vui lòng chọn phương thức thanh toán.");
+            }
 
-            // 6. BƯỚC 2: XỬ LÝ CHI TIẾT ĐƠN HÀNG (ORDER DETAILS) VÀ CẬP NHẬT KHO HÀNG
-            // Gọi hàm processOrderDetailsAndUpdateStock để:
-            // - Tạo các đối tượng OrderDetail cho từng sản phẩm trong giỏ hàng.
-            // - Liên kết chúng với Order vừa tạo.
-            // - Giảm số lượng tồn kho của sản phẩm tương ứng.
-            // - Lưu các OrderDetail vào DB.
-            List<OrderDetail> orderDetails = processOrderDetailsAndUpdateStock(newOrder.getId(), cart);
-            newOrder.setListOfDetailOrder(orderDetails); // Gán danh sách chi tiết vào Order
+            String deliveryPersonName = getDeliveryPersonNameFromRequest(request, user);
+            String deliveryPhone = getDeliveryPhoneFromRequest(request, user);
+            Address rawDeliveryAddress = getRawDeliveryAddressFromRequest(request);
+            String deliveryNotes = request.getParameter("shippingNotesHidden");
+            if (deliveryNotes == null) deliveryNotes = "";
 
-            // 7. BƯỚC 3: XỬ LÝ THÔNG TIN ĐỊA CHỈ GIAO HÀNG (DELIVERY ADDRESS)
-            // Gọi hàm processDeliveryAddress để:
-            // - Xác định địa chỉ giao hàng dựa trên lựa chọn của người dùng (giống địa chỉ shipping hay địa chỉ khác).
-            // - Tạo và lưu đối tượng Address cho việc giao hàng này vào DB.
-            Address deliveryAddress = processDeliveryAddress(request, user);
+            if ("cod".equalsIgnoreCase(paymentMethodChoice)) {
+                // XỬ LÝ COD
 
-            // 8. BƯỚC 4: TẠO THÔNG TIN VẬN CHUYỂN (DELIVERY INFORMATION)
-            // Gọi hàm processDeliveryInformation để:
-            // - Tạo đối tượng Delivery, liên kết với Order và Address giao hàng.
-            // - Bao gồm thông tin người nhận, SĐT, ghi chú, phí ship, trạng thái vận chuyển.
-            // - Lưu đối tượng Delivery vào DB.
-            Delivery deliveryInfo = processDeliveryInformation(newOrder.getId(), deliveryAddress.getId(), request, cart, deliveryPersonNameFromRequest(request), deliveryPhoneFromRequest(request));
+                // 2. Lưu Order
+                Order newOrder = createAndSaveOrderToDb(user, cart, "Chờ xác nhận");
 
-            // Sau khi tất cả thành công, xóa giỏ hàng
-            removeCart(session);
+                // 3. Lưu OrderDetails và cập nhật kho
+                List<OrderDetail> orderDetails = createAndSaveOrderDetailsAndUpdateStock(newOrder.getId(), cart);
+                newOrder.setListOfDetailOrder(orderDetails);
 
-            // Chuẩn bị dữ liệu cho trang thành công
-            Ordered orderedDataForView = new Ordered(cart,
-                    newOrder.getId(), newOrder.getTimeOrdered(), deliveryInfo.getFullName(),
-                    deliveryInfo.getNote(), deliveryAddress.getAddressDetail(), deliveryInfo.getStatus(),
-                    newOrder.getLastPrice(), paymentMethod);
+                // 4. Lưu Delivery Info
 
-            request.setAttribute("ordered", orderedDataForView);
-            request.setAttribute("message", "Đặt hàng thành công!");
-            request.getRequestDispatcher("payment-success.jsp").forward(request, response);
+                // 5. Lưu Payment record cho COD
+                Payment codPayment = new Payment();
+                codPayment.setIdOrder(newOrder.getId());
+                codPayment.setMethod(1); // 1 = COD
+                codPayment.setStatus("Pending");
+                codPayment.setTime(LocalDateTime.now());
+                codPayment.setPrice(cart.getLastPrice());
+                codPayment.setVnpTxnRef(null);
+                paymentService.insertPayment(codPayment);
+
+                cartService.clearCartInDatabase(user.getId());
+                removeCartFromSession(session);
+                Cart newEmptyCart = new Cart();
+                newEmptyCart.setIdUser(user.getId());
+                session.setAttribute("cart", newEmptyCart);
+
+                request.setAttribute("orderId", newOrder.getId());
+                request.setAttribute("message", "Đặt hàng COD thành công!");
+                request.getRequestDispatcher("payment-success.jsp").forward(request, response);
+
+            } else if ("vnpay".equalsIgnoreCase(paymentMethodChoice)) {
+                // XỬ LÝ VNPAY
+                long amountVND = (long) cart.getLastPrice();
+                if (amountVND <= 0) {
+                    throw new IllegalStateException("Tổng giá trị đơn hàng không hợp lệ.");
+                }
+
+                String vnp_TxnRef = String.valueOf(System.currentTimeMillis()); // Mã giao dịch duy nhất cho VNPAY
+                String orderInfoDescription = "Thanh toan don hang #" + vnp_TxnRef + " User: " + user.getEmail();
+
+                // Lưu thông tin đơn hàng tạm vào session
+                PendingOrderInfo pendingOrder = new PendingOrderInfo(
+                        user, cart, rawDeliveryAddress,
+                        deliveryPersonName, deliveryPhone, deliveryNotes,
+                        paymentMethodChoice, vnp_TxnRef
+                );
+                session.setAttribute(vnp_TxnRef, pendingOrder);
+
+                String vnp_IpAddr = getClientIpAddr(request);
+                String paymentUrl = createVnpayPaymentUrl(vnp_TxnRef, amountVND, orderInfoDescription, vnp_IpAddr, request);
+
+                response.sendRedirect(paymentUrl);
+
+            } else {
+                throw new IllegalArgumentException("Phương thức thanh toán không hỗ trợ.");
+            }
 
         } catch (IllegalStateException e) {
             e.printStackTrace();
-            String currentStep = "shipping";
-            if (request.getParameter("SameOtherAddress") != null) {
-                currentStep = "payment";
-            }
-            response.sendRedirect("checkout.jsp?step=" + currentStep + "&errorMessage=" + java.net.URLEncoder.encode(e.getMessage(), "UTF-8"));
+            response.sendRedirect(request.getContextPath() + "/checkout.jsp?errorMessage=" + URLEncoder.encode(e.getMessage(), StandardCharsets.UTF_8));
         } catch (Exception e) {
             e.printStackTrace();
-            request.setAttribute("errorMessage", "Đã có lỗi không mong muốn xảy ra.");
-            request.getRequestDispatcher("error-page.jsp").forward(request, response);
+            request.setAttribute("errorMessage", "Lỗi xử lý đơn hàng: " + e.getMessage());
+            request.getRequestDispatcher("/WEB-INF/views/error-page.jsp").forward(request, response);
         }
     }
 
-    private void removeCart(HttpSession session) {
-        session.removeAttribute("cart");
-    }
 
-    /**
-     * Tạo và lưu đối tượng Order cơ bản.
-     */
-    private Order processOrderCreation(HttpServletRequest request, User user, Cart cart, String paymentMethod) {
-        Voucher voucher = cart.getAppliedVoucher();
-        String orderStatus = "Đang xử lý";
-        if ("cod".equals(paymentMethod)) {
-            orderStatus = "Đang giao hàng";
-        } else if ("bank_transfer".equals(paymentMethod)) {
-            orderStatus = "Chờ thanh toán";
+    // Phương thức tạo Order và lưu vào DB (có thể điều chỉnh tên và tham số)
+    private Order createAndSaveOrderToDb(User user, Cart cart, String initialStatusOrder) {
+        Order order = new Order();
+        order.setUser(user);
+        if (cart.getAppliedVoucher() != null) {
+            order.setVoucher(cart.getAppliedVoucher());
         }
+        order.setTimeOrdered(LocalDateTime.now()); // Dùng LocalDateTime
+        order.setStatus(initialStatusOrder); // Ví dụ: "Chờ xác nhận", "Đang xử lý"
+        order.setTotalPrice(cart.getTotalPrice());
+        order.setLastPrice(cart.getLastPrice());
 
-        double totalPrice = cart.getTotalPrice();
-        double lastPrice = cart.getLastPrice();
-
-        Order order = new Order(user, voucher, orderStatus, totalPrice, lastPrice);
-        int idOrder = orderService.insertOrder(order);
-        order.setId(idOrder);
+        int newOrderId = orderService.insertOrder(order);
+        if (newOrderId <= 0) {
+            throw new RuntimeException("Lỗi khi tạo đơn hàng mới.");
+        }
+        order.setId(newOrderId);
         return order;
     }
 
-    /**
-     * Xử lý tạo các OrderDetail, cập nhật số lượng tồn kho.
-     * Trả về danh sách OrderDetail đã được tạo.
-     */
-    private List<OrderDetail> processOrderDetailsAndUpdateStock(int orderId, Cart cart) {
+    // Phương thức tạo OrderDetails và lưu, cập nhật kho
+    private List<OrderDetail> createAndSaveOrderDetailsAndUpdateStock(int orderId, Cart cart) {
         List<OrderDetail> createdOrderDetails = new ArrayList<>();
+        if (cart == null || cart.getCartItems().isEmpty()) {
+            throw new IllegalStateException("Không thể tạo chi tiết đơn hàng từ giỏ hàng trống.");
+        }
+
         for (CartItem item : cart.getCartItems()) {
             Style styleFromCart = item.getStyle();
-            Style currentStyleInDB = styleService.getStyleByID(styleFromCart.getId());
+            if (styleFromCart == null || styleFromCart.getProduct() == null) {
+                throw new IllegalStateException("Một sản phẩm trong giỏ hàng có thông tin không hợp lệ.");
+            }
 
+            Style currentStyleInDB = styleService.getStyleByID(styleFromCart.getId());
             if (currentStyleInDB == null) {
                 throw new IllegalStateException("Sản phẩm '" + styleFromCart.getProduct().getName() + " - " + styleFromCart.getName() + "' không còn tồn tại.");
             }
@@ -139,15 +190,13 @@ public class OrderServlet extends HttpServlet {
             if (quantityOrdered <= 0) {
                 throw new IllegalStateException("Số lượng đặt cho sản phẩm '" + styleFromCart.getProduct().getName() + "' phải lớn hơn 0.");
             }
-
             if (quantityOrdered > currentStyleInDB.getQuantity()) {
-                throw new IllegalStateException("Sản phẩm '" + styleFromCart.getProduct().getName() + " - " + styleFromCart.getName() + "' không đủ số lượng. Yêu cầu: " + quantityOrdered + ", Hiện có: " + currentStyleInDB.getQuantity());
+                throw new IllegalStateException("Sản phẩm '" + styleFromCart.getProduct().getName() + " - " + styleFromCart.getName() + "' không đủ số lượng. Yêu cầu: " + quantityOrdered + ", Hiện có: " + currentStyleInDB.getQuantity() + ".");
             }
 
-            // Cập nhật số lượng trong DB
             boolean updateSuccess = styleService.decreaseStyleAndProductQuantity(currentStyleInDB.getId(), currentStyleInDB.getProduct().getId(), quantityOrdered);
             if (!updateSuccess) {
-                throw new RuntimeException("Lỗi khi cập nhật số lượng cho sản phẩm: " + currentStyleInDB.getProduct().getName());
+                throw new RuntimeException("Lỗi khi cập nhật số lượng tồn kho cho sản phẩm: " + currentStyleInDB.getProduct().getName());
             }
 
             OrderDetail orderDetail = new OrderDetail(orderId, currentStyleInDB, quantityOrdered);
@@ -157,36 +206,8 @@ public class OrderServlet extends HttpServlet {
         return createdOrderDetails;
     }
 
-    /**
-     * Xác định tên người nhận hàng từ request.
-     */
-    private String deliveryPersonNameFromRequest(HttpServletRequest request) {
-        String billingAddressOption = request.getParameter("SameOtherAddress");
-        if ("same_as_shipping".equals(billingAddressOption)) {
-            return request.getParameter("shippingFullNameHidden");
-        } else {
-            return request.getParameter("billingFullName");
-        }
-    }
 
-    /**
-     * Xác định số điện thoại nhận hàng từ request.
-     */
-    private String deliveryPhoneFromRequest(HttpServletRequest request) {
-        String billingAddressOption = request.getParameter("SameOtherAddress");
-        if ("same_as_shipping".equals(billingAddressOption)) {
-            return request.getParameter("shippingPhoneHidden");
-        } else {
-            return request.getParameter("billingPhone");
-        }
-    }
-
-
-    /**
-     * Xử lý và tạo/lưu đối tượng Address cho việc giao hàng.
-     * Trả về đối tượng Address đã được lưu.
-     */
-    private Address processDeliveryAddress(HttpServletRequest request, User user) {
+    private Address getRawDeliveryAddressFromRequest(HttpServletRequest request) {
         String billingAddressOption = request.getParameter("SameOtherAddress");
         String detail, ward, district, province;
 
@@ -195,49 +216,153 @@ public class OrderServlet extends HttpServlet {
             ward = request.getParameter("shippingWardHidden");
             district = request.getParameter("shippingDistrictHidden");
             province = request.getParameter("shippingProvinceHidden");
-            System.out.println("địa chỉ: " + detail + ward + district + province);
-            System.out.println("Servlet: Delivery address is SAME AS SHIPPING info from hidden fields.");
-        } else {
+        } else if ("different_billing".equals(billingAddressOption)) {
             detail = request.getParameter("billingDetail");
             ward = request.getParameter("billingWard");
             district = request.getParameter("billingDistrict");
             province = request.getParameter("billingProvince");
-            System.out.println("Servlet: Delivery address from DIFFERENT BILLING form.");
+        } else {
+            detail = request.getParameter("shippingDetailHidden");
+            ward = request.getParameter("shippingWardHidden");
+            district = request.getParameter("shippingDistrictHidden");
+            province = request.getParameter("shippingProvinceHidden");
+            if ((detail == null || detail.trim().isEmpty()) && (request.getParameter("billingDetail") != null && !request.getParameter("billingDetail").trim().isEmpty())) {
+                detail = request.getParameter("billingDetail");
+                ward = request.getParameter("billingWard");
+                district = request.getParameter("billingDistrict");
+                province = request.getParameter("billingProvince");
+            }
         }
-
         if (detail == null || detail.trim().isEmpty() || ward == null || ward.trim().isEmpty() || district == null || district.trim().isEmpty() || province == null || province.trim().isEmpty()) {
-            throw new IllegalStateException("Thông tin địa chỉ giao hàng (chi tiết, phường/xã, quận/huyện, tỉnh/thành) không đầy đủ.");
+            throw new IllegalStateException("Thông tin địa chỉ giao hàng không đầy đủ.");
         }
+        return new Address(0, province.trim(), district.trim(), ward.trim(), detail.trim());
+    }
 
-        // Cân nhắc việc tìm kiếm địa chỉ đã tồn tại trước khi tạo mới
-        Address existingAddress = addressService.findAddress(province, district, ward, detail);
+    private Address findOrCreateAndSaveAddress(Address rawAddress) {
+        Address existingAddress = addressService.findAddress(rawAddress.getProvince(), rawAddress.getDistrict(), rawAddress.getWard(), rawAddress.getAddressDetail());
         if (existingAddress != null) {
             return existingAddress;
         } else {
-            int idAddressForDelivery = existingAddress.getId() + 1;
-            Address deliveryAddressObject = new Address(idAddressForDelivery, province, district, ward, detail);
-            addressService.insertAddress(deliveryAddressObject);
-            return deliveryAddressObject;
+            int newAddressId = addressService.insertAddress(rawAddress);
+            if (newAddressId <= 0) {
+                throw new RuntimeException("Lỗi khi lưu địa chỉ mới.");
+            }
+            rawAddress.setId(newAddressId);
+            return rawAddress;
         }
     }
 
-    /**
-     * Tạo và lưu thông tin Delivery.
-     * Trả về đối tượng Delivery đã được lưu.
-     */
-    private Delivery processDeliveryInformation(int orderId, int deliveryAddressId, HttpServletRequest request, Cart cart, String deliveryPersonName, String deliveryPhone) {
-        String deliveryNotes = request.getParameter("shippingNotesHidden");
-
-        // Kiểm tra tên người nhận và số điện thoại
-        if (deliveryPersonName == null || deliveryPersonName.trim().isEmpty() || deliveryPhone == null || deliveryPhone.trim().isEmpty()) {
-            throw new IllegalStateException("Tên người nhận hoặc số điện thoại giao hàng không được để trống.");
+    private String getDeliveryPersonNameFromRequest(HttpServletRequest request, User user) {
+        String billingAddressOption = request.getParameter("SameOtherAddress");
+        String name = null;
+        if ("same_as_shipping".equals(billingAddressOption)) {
+            name = request.getParameter("shippingFullNameHidden");
+        } else if ("different_billing".equals(billingAddressOption)) {
+            name = request.getParameter("billingFullName");
         }
+        if (name == null || name.trim().isEmpty()) {
+            name = (user != null && user.getFullName() != null) ? user.getFullName() : null;
+        }
+        if (name == null || name.trim().isEmpty()) {
+            throw new IllegalStateException("Tên người nhận hàng không được để trống.");
+        }
+        return name.trim();
+    }
 
-        double shippingFee = cart.getShippingFee();
-        String deliveryStatus = "Đang chuẩn bị hàng";
+    private String getDeliveryPhoneFromRequest(HttpServletRequest request, User user) {
+        String billingAddressOption = request.getParameter("SameOtherAddress");
+        String phone = null;
+        if ("same_as_shipping".equals(billingAddressOption)) {
+            phone = request.getParameter("shippingPhoneHidden");
+        } else if ("different_billing".equals(billingAddressOption)) {
+            phone = request.getParameter("billingPhone");
+        }
+        if (phone == null || phone.trim().isEmpty()) {
+            phone = (user != null && user.getNumberPhone() != null) ? user.getNumberPhone() : null;
+        }
+        if (phone == null || phone.trim().isEmpty()) {
+            throw new IllegalStateException("Số điện thoại người nhận hàng không được để trống.");
+        }
+        return phone.trim();
+    }
 
-        Delivery delivery = new Delivery(orderId, deliveryAddressId, deliveryPersonName, deliveryPhone, 0, shippingFee, deliveryNotes, deliveryStatus);
-        deliveryService.insertDelivery(delivery);
-        return delivery;
+    private void removeCartFromSession(HttpSession session) {
+        session.removeAttribute("cart");
+    }
+
+    private String getClientIpAddr(HttpServletRequest request) {
+        String ip = request.getHeader("X-Forwarded-For");
+        if (ip == null || ip.isEmpty() || "unknown".equalsIgnoreCase(ip)) ip = request.getHeader("Proxy-Client-IP");
+        if (ip == null || ip.isEmpty() || "unknown".equalsIgnoreCase(ip)) ip = request.getHeader("WL-Proxy-Client-IP");
+        if (ip == null || ip.isEmpty() || "unknown".equalsIgnoreCase(ip)) ip = request.getHeader("HTTP_CLIENT_IP");
+        if (ip == null || ip.isEmpty() || "unknown".equalsIgnoreCase(ip))
+            ip = request.getHeader("HTTP_X_FORWARDED_FOR");
+        if (ip == null || ip.isEmpty() || "unknown".equalsIgnoreCase(ip)) ip = request.getRemoteAddr();
+        if (ip != null && ip.contains(",")) ip = ip.split(",")[0].trim();
+        return ip;
+    }
+
+    public static String hmacSHA512(String key, String data) {
+        try {
+            Mac hmac512 = Mac.getInstance("HmacSHA512");
+            SecretKeySpec secretKey = new SecretKeySpec(key.getBytes(StandardCharsets.UTF_8), "HmacSHA512");
+            hmac512.init(secretKey);
+            byte[] bytes = hmac512.doFinal(data.getBytes(StandardCharsets.UTF_8));
+            StringBuilder sb = new StringBuilder();
+            for (byte b : bytes) sb.append(String.format("%02x", b));
+            return sb.toString();
+        } catch (Exception ex) {
+            throw new RuntimeException("HMAC SHA512 generation failed", ex);
+        }
+    }
+
+    private String createVnpayPaymentUrl(String vnp_TxnRef, long amountVND, String orderInfo, String ipAddr, HttpServletRequest request) {
+        long amountForVnpay = amountVND * 100;
+        Map<String, String> vnp_Params = new HashMap<>();
+        vnp_Params.put("vnp_Version", VNP_VERSION);
+        vnp_Params.put("vnp_Command", VNP_COMMAND);
+        vnp_Params.put("vnp_TmnCode", VNP_TMNCODE);
+        vnp_Params.put("vnp_Amount", String.valueOf(amountForVnpay));
+        vnp_Params.put("vnp_CurrCode", "VND");
+        vnp_Params.put("vnp_TxnRef", vnp_TxnRef);
+        vnp_Params.put("vnp_OrderInfo", orderInfo);
+        vnp_Params.put("vnp_OrderType", "other");
+        vnp_Params.put("vnp_Locale", "vn");
+        String scheme = request.getScheme();
+        String serverName = request.getServerName();
+        int serverPort = request.getServerPort();
+        String contextPath = request.getContextPath();
+        String returnUrl = scheme + "://" + serverName + ((serverPort == 80 || serverPort == 443) ? "" : ":" + serverPort) + contextPath + "/vnpayreturn";
+        vnp_Params.put("vnp_ReturnUrl", returnUrl);
+        vnp_Params.put("vnp_IpAddr", ipAddr);
+        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyyMMddHHmmss");
+        String vnp_CreateDate = LocalDateTime.now().format(formatter);
+        vnp_Params.put("vnp_CreateDate", vnp_CreateDate);
+        List<String> fieldNames = new ArrayList<>(vnp_Params.keySet());
+        Collections.sort(fieldNames);
+        StringBuilder hashData = new StringBuilder();
+        StringBuilder query = new StringBuilder();
+        Iterator<String> itr = fieldNames.iterator();
+        while (itr.hasNext()) {
+            String fieldName = itr.next();
+            String fieldValue = vnp_Params.get(fieldName);
+            if ((fieldValue != null) && (!fieldValue.isEmpty())) {
+                hashData.append(fieldName);
+                hashData.append('=');
+                hashData.append(URLEncoder.encode(fieldValue, StandardCharsets.US_ASCII));
+                query.append(URLEncoder.encode(fieldName, StandardCharsets.US_ASCII));
+                query.append('=');
+                query.append(URLEncoder.encode(fieldValue, StandardCharsets.US_ASCII));
+                if (itr.hasNext()) {
+                    query.append('&');
+                    hashData.append('&');
+                }
+            }
+        }
+        String queryUrl = query.toString();
+        String secureHash = hmacSHA512(VNP_HASHSECRET, hashData.toString());
+        queryUrl += "&vnp_SecureHash=" + secureHash;
+        return VNP_URL + "?" + queryUrl;
     }
 }
